# defi_ai_agent_consultant

./: README.md
defi-ai-agent-consultant-main/defi-ai-agent-consultant-main/: README.md
defi-ai-agent-consultant-main/defi-ai-agent-consultant-main/tools/icrc-3/: Cargo.toml  README.md  dfx.json
defi-ai-agent-consultant-main/defi-ai-agent-consultant-main/tools/icrc-3/backend/: Cargo.toml  icrc3_token_backend.did
defi-ai-agent-consultant-main/defi-ai-agent-consultant-main/tools/icrc-3/backend/src/: lib.rs  types.rs
defi-ai-agent-consultant-main/defi-ai-agent-consultant-main/tools/icrc-3/backend/tests/: pocket_ic_tests.rs
