[package]
name = "icrc3_token_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
pocket-ic = "2.0.0"
hex = "0.4.3"

[features]
integration_tests = []
